--- a/pages/Entertainment/ent-pages/page4.html
+++ b/pages/Entertainment/ent-pages/page4.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The News Reporter</title>
     <link rel="stylesheet" href="./../../Entertainment/../../CSS/entertainment.css" />
+    <link rel="icon" href="./../../../images/faviconIcon.jpeg" type="image/jpeg" />
 </head>
 
 <body>
