--- a/pages/Entertainment/entertainment.html
+++ b/pages/Entertainment/entertainment.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../CSS/entertainment.css">
+    <link rel="icon" href="./../../images/faviconIcon.jpeg" type="image/jpeg" />
     <title>Entertainment</title>
 </head>
 <body>
