--- a/pages/culture/culture.html
+++ b/pages/culture/culture.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./../../CSS/HomeStyles.css">
+    <link rel="icon" href="images/faviconIcon.jpeg" type="image/jpeg" />
     <title>The News Reporter</title>
-    <link rel="stylesheet" href="./../../CSS/culture/cultural_news.css" />
 </head>
 
 <body>
     <!-- started here navbar -->
+
     <header>
         <nav>
             <div class="top-navbar">
@@ -27,14 +29,10 @@
                 </div>
                 <div>
                     <div class="top-nav-icons">
-                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
-                                alt="facebook-icon" target="_blank"></a>
-                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
-                                alt="instagram-icon"></a>
-                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
-                                alt="telegram-icon"></a>
-                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
-                                alt="youtube-icon"></a>
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png" alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png" alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png" alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png" alt="youtube-icon"></a>
                     </div>
                     <div class="top-nav-search-bar">
                         <input type="text" placeholder="Search news" />
@@ -45,12 +43,12 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./worldnews/worldnews.html">world news</a></li>
                     <li><a href="./../sport/sport.html">Sports</a></li>
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="./../Business_News.html">Business</a></li>
-                    <li><a href="#">Culture</a></li>
+                    <li><a href="./culture/culture.html">Culture</a></li>
                     <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
@@ -93,7 +91,7 @@
 
                 <div class="hompage-second-card-container">
                     <div class="homepage-heading-details">
-                        <h1>latest Cultural News</h1>
+                        
                     </div>
 
                     <div class="cards">
@@ -201,7 +199,7 @@
                     <li><a href="./../sport/sport.html">Sports</a></li>
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
-                    <li><a href="Business_News.html">Business</a></li>
+                    <li><a href="./../Business_News.html">Business</a></li>
                     <li><a href="./../culture.html">Culture</a></li>
                     <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
