all changes done

--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -4,6 +4,7 @@
     <title> The News Reporter</title>
     <link href="../../CSS/education.css" rel="stylesheet">
     <link rel="icon" href="./../../images/logo1.jpg" type="img/png">
+    <link rel="icon" href="./../images/faviconIcon.jpeg" type="image/jpeg" />
 </head>
 <body>
     <header>
@@ -46,7 +47,7 @@
                     <li><a href="../tech/tech.html">Tech</a></li>
                     <li><a href="../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="../Business/Business_News.html">Business</a></li>
-                    <li><a href="../culture.html">Culture</a></li>
+                    <li><a href="../culture/cultural_news.html">Culture</a></li>
                     <li><a href="#">Education</a></li>
                 </ul>
             </div>
@@ -201,7 +202,7 @@
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="./../Business/Business_News.html">Business</a></li>
-                    <li><a href="./../culture.html">Culture</a></li>
+                    <li><a href="./../culture/cultural_news.html">Culture</a></li>
                     <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
