--- a/pages/worldnews/worldnews.html
+++ b/pages/worldnews/worldnews.html
@@ -50,7 +50,7 @@
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="./../Business/Business_News.html">Business</a></li>
-                    <li><a href="./../culture.html">Culture</a></li>
+                    <li><a href="./../culture/cultural_news.html">Culture</a></li>
                     <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
@@ -195,7 +195,7 @@
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="./../Business/Business_News.html">Business</a></li>
-                    <li><a href="./../culture.html">Culture</a></li>
+                    <li><a href="./../culture/cultural_news.html">Culture</a></li>
                     <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
