--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../../CSS/HomeStyles.css">
-    <link rel="icon" href="images/faviconIcon.jpeg" type="image/jpeg" />
+    <link rel="icon" href="./../../images/faviconIcon.jpeg" type="image/jpeg" />
     <title>The News Reporter</title>
 </head>
 
@@ -48,7 +48,7 @@
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="Business_News.html">Business</a></li>
-                    <li><a href="./../culture.html">Culture</a></li>
+                    <li><a href="./../culture/cultural_news.html">Culture</a></li>
                     <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
@@ -185,7 +185,7 @@
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="./../Business/Business_News.html">Business</a></li>
-                    <li><a href="./../culture.html">Culture</a></li>
+                    <li><a href="./../culture/cultural_news.html">Culture</a></li>
                     <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
