--- a/pages/Business/business_news_3.html
+++ b/pages/Business/business_news_3.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The News Reporter</title>
     <link rel="stylesheet" href="./../../CSS/business.css" />
+    <link rel="icon" href="./../../images/faviconIcon.jpeg" type="image/jpeg" />
 </head>
 
 <body>
@@ -53,7 +54,7 @@
                         <li><a href="./../tech/tech.html">Tech</a></li>
                         <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                         <li><a href="Business_News.html">Business</a></li>
-                        <li><a href="./../culture.html">Culture</a></li>
+                        <li><a href="./../culture/cultural_news.html">Culture</a></li>
                         <li><a href="./../Education/education.html">Education</a></li>
                     </ul>
                 </div>
@@ -124,7 +125,7 @@
                         <li><a href="./../tech/tech.html">Tech</a></li>
                         <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
                         <li><a href="Business_News.html">Business</a></li>
-                        <li><a href="./../culture.html">Culture</a></li>
+                        <li><a href="./../culture/cultural_news.html">Culture</a></li>
                         <li><a href="./../Education/education.html">Education</a></li>
                     </ul>
                 </div>
