all favicons added & broken links fixed

--- a/pages/Entertainment/entertainment.html
+++ b/pages/Entertainment/entertainment.html
@@ -52,7 +52,7 @@
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="entertainment.html">Entertainment</a></li>
                     <li><a href="./../Business/Business_News.html">Business</a></li>
-                    <li><a href="./../culture.html">Culture</a></li>
+                    <li><a href="./../culture/cultural_news.html">Culture</a></li>
                     <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
