--- a/pages/Business/Business_News.html
+++ b/pages/Business/Business_News.html
@@ -43,7 +43,7 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="./worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
                     <li><a href="./../sport/sport.html">Sports</a></li>
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
