--- a/pages/Education/education.html
+++ b/pages/Education/education.html
@@ -3,8 +3,7 @@
 <head>
     <title> The News Reporter</title>
     <link href="../../CSS/education.css" rel="stylesheet">
-    <link rel="icon" href="./../../images/logo1.jpg" type="img/png">
-    <link rel="icon" href="./../images/faviconIcon.jpeg" type="image/jpeg" />
+    <link rel="icon" href="./../../images/faviconIcon.jpeg" type="image/jpeg" />
 </head>
 <body>
     <header>
