--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../css/contact.css">
+    <link rel="icon" href="./../../images/faviconIcon.jpeg" type="image/jpeg" />
     <title>the news reporter</title>
 </head>
 
@@ -22,7 +23,7 @@
                     <ul class="top-nav-list">
                         <li><a href="./../index.html">Home</a></li>|
                         <li><a href="./aboutusPage.html">About</a></li>|
-                        <li><a href="">Contact</a></li>|
+                        <li>Contact</li>|
                         <li><a href="./login.html">Login</a></li>
                     </ul>
                 </div>
@@ -76,7 +77,7 @@
         </div>
     </div>
 
-    <h1 class="contact ">connect with us</h1>
+    <h1 class="contact ">Connect with us</h1>
 
     <form class="form ">
         <label for="input full name ">  Full name:</label>
@@ -98,7 +99,7 @@
         <label for="input meassage ">Message:</label>
         <input type="meassage " id="input message " required class="box message" /><br/><br/>
 
-        <input type="submit " value="send message " class="input " /> </form>
+        <input type="submit " value="send message" class="input "/> </form>
     </div>
     </div>
 
