--- a/pages/culture/cultural_news.html
+++ b/pages/culture/cultural_news.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../../CSS/HomeStyles.css">
-    <link rel="icon" href="images/faviconIcon.jpeg" type="image/jpeg" />
+    <link rel="icon" href="./../../images/faviconIcon.jpeg" type="image/jpeg" />
     <title>The News Reporter</title>
 </head>
 
@@ -43,12 +43,12 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="./worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
                     <li><a href="./../sport/sport.html">Sports</a></li>
                     <li><a href="./../tech/tech.html">Tech</a></li>
                     <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
-                    <li><a href="./../Business_News.html">Business</a></li>
-                    <li><a href="./culture/culture.html">Culture</a></li>
+                    <li><a href="./../Business/Business_News.html">Business</a></li>
+                    <li><a href="#">Culture</a></li>
                     <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
