--- a/pages/culture/cultural_news5.html
+++ b/pages/culture/cultural_news5.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The News Reporter</title>
     <link rel="stylesheet" href="./../../CSS/culture/Cultural_News.css" />
+    <link rel="icon" href="./../../images/faviconIcon.jpeg" type="image/jpeg" />
 </head>
 
 <body>
