--- a/pages/sport/sport.html
+++ b/pages/sport/sport.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../../CSS/sportstyle.css"></link>
+    <link rel="icon" href="./../../images/faviconIcon.jpeg" type="image/jpeg" />
     
 
     <title>sport</title>
@@ -47,13 +48,13 @@
 
             <div>
                 <ul class="nav-list">
-                    <li><a href="../../index.html">world news</a></li>
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
                     <li><a href="./sport.html">Sports</a></li>
                     <li><a href="../tech/tech.html">Tech</a></li>
                     <li><a href="../Entertainment/entertainment.html">Entertainment</a></li>
                     <li><a href="../Business/Business_News.html">Business</a></li>
-                    <li><a href="../culture.html">Culture</a></li>
-                    <li><a href="../education.html">Education</a></li>
+                    <li><a href="../culture/cultural_news.html">Culture</a></li>
+                    <li><a href="../Education/education.html">Education</a></li>
                 </ul>
             </div>
         </nav>
