--- a/pages/sport/swapnil.html
+++ b/pages/sport/swapnil.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./../../CSS/sportstyle.css"></link>
+    <link rel="icon" href="./../../images/faviconIcon.jpeg" type="image/jpeg" />
     <title>cricket news</title>
 </head>
 <body>
