--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
           <h2>Subscribe to our Newsletter</h2>
           <form>
             <input type="email" name="email" placeholder="Your email" required />
-            <input type="text" name="name" placeholder="Your name" required />
+            <input type="text" placeholder="Your name" required />
             <button type="submit">Subscribe</button>
           </form>
         </div>
@@ -320,8 +320,8 @@
       <div class="footer-nav-links">
         <h3>Subscribe to our Newsletter</h3>
         <form>
-          <input type="email" name="email" placeholder="Your email" required />
-          <input type="text" name="name" placeholder="Your name" required />
+          <input type="email" placeholder="Your email" required />
+          <input type="text" placeholder="Your name" required />
           <button type="submit">Subscribe</button>
         </form>
       </div>
