--- a/pages/aboutusPage.html
+++ b/pages/aboutusPage.html
@@ -135,11 +135,10 @@
           <form>
             <input
               type="email"
-              name="email"
               placeholder="Your email"
               required
             />
-            <input type="text" name="name" placeholder="Your name" required />
+            <input type="text" placeholder="Your name" required />
             <button type="submit">Subscribe</button>
           </form>
         </div>
