--- a/pages/login.html
+++ b/pages/login.html
@@ -14,11 +14,11 @@
       <form>
         <div class="input-group">
           <label for="email">Email</label>
-          <input type="email" id="email" name="email" required />
+          <input type="email" id="email" required />
         </div>
         <div class="input-group">
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" required />
+          <input type="password" id="password" required />
         </div>
         <button type="submit" class="login-button">Login</button>
       </form>
