--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <div class="newsletter-section">
           <h2>Subscribe to our Newsletter</h2>
           <form>
-            <input type="email" name="email" placeholder="Your email" required />
+            <input type="email" placeholder="Your email" required />
             <input type="text" placeholder="Your name" required />
             <button type="submit">Subscribe</button>
           </form>
@@ -328,7 +328,7 @@
       <div class="footer-nav-links">
         <h3>Links</h3>
         <ul>
-          <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="./pages/aboutusPage.html">About</a></li>
           <li><a href="./pages/contact.html">Contact</a></li>
           <li><a href="./pages/login.html">Login</a></li>
