--- a/pages/aboutusPage.html
+++ b/pages/aboutusPage.html
@@ -133,11 +133,7 @@
         <div class="footer-nav-links">
           <h3>Subscribe to our Newsletter</h3>
           <form>
-            <input
-              type="email"
-              placeholder="Your email"
-              required
-            />
+            <input type="email" placeholder="Your email" required />
             <input type="text" placeholder="Your name" required />
             <button type="submit">Subscribe</button>
           </form>
@@ -146,7 +142,7 @@
           <h3>Links</h3>
           <ul>
             <li><a href="../index.html">Home</a></li>
-            <li href="#">About</li>
+            <li href="./aboutusPage.html">About</li>
             <li><a href="./contact.html">Contact</a></li>
             <li><a href="./login.html">Login</a></li>
           </ul>
