--- a/pages/login.html
+++ b/pages/login.html
@@ -22,7 +22,7 @@
         </div>
         <button type="submit" class="login-button">Login</button>
       </form>
-      <p class="signup-link">Don't have an account? <a href="">Sign Up</a></p>
+      <p class="signup-link">Don't have an account? <a href="./signup.html">Sign Up</a></p>
     </div>
   </body>
 </html>
