--- a/pages/sport/sport.html
+++ b/pages/sport/sport.html
@@ -24,7 +24,7 @@
                     <ul class="top-nav-list">
                         <li><a href="./../../index.html">Home</a></li>|
                         <li><a href="./../aboutusPage.html">About</a></li>|
-                        <li><a href="./../culture.html">Contact</a></li>|
+                        <li><a href="./../contact.html">Contact</a></li>|
                         <li><a href="./../login.html">Login</a></li>
                     </ul>
                 </div>
