--- a/pages/culture/cultural_news1.html
+++ b/pages/culture/cultural_news1.html
@@ -4,87 +4,62 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The News Reporter</title>
-    <link rel="stylesheet" href="./../../CSS/culture/Cultural_News.css" />
+    <link rel="stylesheet" href="./../../CSS/culture/Cultural_News.css">
+    <title>Document</title>
 </head>
-
 <body>
-   <!-- started here navbar -->
-
-   <header>
-    <nav>
-      <div class="top-navbar">
-        <div class="main-logo">
-          <a href="./index.html">
-            <h4>The</h4>
-            <h2><span class="heading-fisrt">News</span> Reporter</h2>
-          </a>
-        </div>
-        <div>
-          <ul class="top-nav-list">
-            <li>Home</li>
-            |
-            <li><a href="./pages/aboutusPage.html">About</a></li>
-            |
-            <li><a href="./pages/contact.html">Contact</a></li>
-            |
-            <li><a href="./pages/login.html">Login</a></li>
-          </ul>
-        </div>
-        <div>
-          <div class="top-nav-icons">
-            <a href="http://facebook.com" target="_blank"
-              ><img
-                src="./images/facebook.png"
-                alt="facebook-icon"
-                target="_blank"
-            /></a>
-            <a href="https://instagram.com" target="_blank"
-              ><img src="./images/instagram.png" alt="instagram-icon"
-            /></a>
-            <a href="https://web.telegram.org" target="_blank"
-              ><img src="./images/telegram.png" alt="telegram-icon"
-            /></a>
-            <a href="https://youtube.com" target="_blank"
-              ><img src="./images/youtube.png" alt="youtube-icon"
-            /></a>
-          </div>
-          <div class="search-and-bar">
-            <div class="top-nav-search-bar">
-              <input type="text" placeholder="Search news" />
-              <img src="./images/magnifying-glass.png" />
+    <!-- started here navbar -->
+    <header>
+        <nav>
+            <div class="top-navbar">
+                <div>
+                    <h4>The</h4>
+                    <h2><span class="heading-fisrt">News</span> Reporter</h2>
+                </div>
+                <div>
+                    <ul class="top-nav-list">
+                        <li><a href="./../../index.html">Home</a></li>|
+                        <li><a href="./../aboutusPage.html">About</a></li>|
+                        <li><a href="./../contact.html">Contact</a></li>|
+                        <li><a href="./../login.html">Login</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <div class="top-nav-icons">
+                        <a href="http://facebook.com" target="_blank"><img src="./../../images/facebook.png"
+                                alt="facebook-icon" target="_blank"></a>
+                        <a href="https://instagram.com" target="_blank"><img src="./../../images/instagram.png"
+                                alt="instagram-icon"></a>
+                        <a href="https://web.telegram.org" target="_blank"><img src="./../../images/telegram.png"
+                                alt="telegram-icon"></a>
+                        <a href="https://youtube.com" target="_blank"><img src="./../../images/youtube.png"
+                                alt="youtube-icon"></a>
+                    </div>
+                    <div class="top-nav-search-bar">
+                        <input type="text" placeholder="Search news" />
+                        <img src="./../../images/magnifying-glass.png" />
+                    </div>
+                </div>
             </div>
-            <img
-              class="menu-bar-icon"
-              src="../images/bar-icon.png"
-              alt="tap to open menu"
-            />
-          </div>
-        </div>
-      </div>
 
-      <div>
-        <ul class="nav-list">
-          <li><a href="./pages/worldnews/worldnews.html">world news</a></li>
-          <li><a href="./pages/sport/sport.html">Sports</a></li>
-          <li><a href="./pages/tech/tech.html">Tech</a></li>
-          <li>
-            <a href="./pages/Entertainment/entertainment.html"
-              >Entertainment</a
-            >
-          </li>
-          <li><a href="./pages/Business/Business_News.html">Business</a></li>
-          <li><a href="./pages/culture.html">Culture</a></li>
-          <li><a href="./pages/Education/education.html">Education</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+            <div>
+                <ul class="nav-list">
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./../sport/sport.html">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
+                    <li><a href="./../Business_News.html">Business</a></li>
+                    <li><a href="./../culture/cultural_news.html">Culture</a></li>
+                    <li><a href="./../Education/education.html">Education</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
     <!-- End here navbar  -->
     <!--Read More content started-->
     <div class="readmore-heading-details">
-        <a href="cultural_news.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
+        <a href="culture.html"><img src="./../../images/back-btn.png" class="back-btn" /></a>
         <h1> The Tarun Tahiliani defends Olympic uniforms criticism.</h1>
     </div>
     
@@ -126,22 +101,22 @@
             <div class="footer-nav-links">
                 <h3>Links</h3>
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Login</a></li>
+                    <li><a href="./../../index.html">Home</a></li>
+                    <li><a href="./../aboutusPage.html">About</a></li>
+                    <li><a href="./../contact.html">Contact</a></li>
+                    <li><a href="./../login.html">Login</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
                 <h3>Important Links</h3>
                 <ul>
-                    <li><a href="">world news</a></li>
-                    <li><a href="">Sports</a></li>
-                    <li><a href="">Tech</a></li>
-                    <li><a href="">Entertainment</a></li>
-                    <li><a href="">Business</a></li>
-                    <li><a href="">Culture</a></li>
-                    <li><a href="">Education</a></li>
+                    <li><a href="./../worldnews/worldnews.html">world news</a></li>
+                    <li><a href="./../sport/sport.html">Sports</a></li>
+                    <li><a href="./../tech/tech.html">Tech</a></li>
+                    <li><a href="./../Entertainment/entertainment.html">Entertainment</a></li>
+                    <li><a href="./../Business_News.html">Business</a></li>
+                    <li><a href="./culture/culture.html">Culture</a></li>
+                    <li><a href="./../Education/education.html">Education</a></li>
                 </ul>
             </div>
             <div class="footer-nav-links">
@@ -173,7 +148,6 @@
     </footer>
 
     <!-- footer has been ended here -->
-
 
 </body>
 
